# stock-alerts

./: .env  README.md  main.py  pyproject.toml  requirements.txt  rh-stocks.py  sort-alphabetical.py  stocks.csv  stocks.txt
.github/: FUNDING.yml
